<resources>
    <string name="app_name">Dukaan Assignment</string>
    <string name="mano_super_market">Mano Super Market</string>
    <string name="your_plan">Your Plan \n <b>100% FREE</b></string>
    <string name="share_more_to_earn_more">Share More to Earn More</string>
    <string name="your_customers_can_visit">Your customers can visit your online store and place the orders from this link.</string>
    <string name="sellplus"><u>sellplus.com/mano</u></string>
    <string name="overview">Overview</string>
    <string name="last_week">Last Week</string>
    <string name="orders">Orders</string>
    <string name="total_sales">TOTAL SALES</string>
    <string name="store_views">Store Views</string>
    <string name="product_views">Product Views</string>
    <string name="view_all">View All</string>
    <string name="active_orders">Active Orders</string>
    <string name="pending">Pending (129)</string>
    <string name="accepted">Accepted (13)</string>
    <string name="shipped">Shipped</string>
</resources>