<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/layout_header" />
    <include layout="@layout/layout_share"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:text="@string/overview"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/last_week"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_14ssp"
                app:drawableEndCompat="@drawable/ic_down_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:id="@+id/gl_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:columnCount="2"
                android:useDefaultMargins="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview">

                <com.example.dukaanassignment.view.CustomTextviews
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:title_text="@string/orders"
                    app:value_text="33" />

                <com.example.dukaanassignment.view.CustomTextviews
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:title_text="@string/total_sales"
                    app:value_text="₹2,918" />

                <com.example.dukaanassignment.view.CustomTextviews
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:title_text="@string/store_views"
                    app:value_text="301" />

                <com.example.dukaanassignment.view.CustomTextviews
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:title_text="@string/product_views"
                    app:value_text="19,121" />

            </GridLayout>

            <TextView
                android:id="@+id/tv_active_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/active_orders"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gl_info" />

            <TextView
                android:id="@+id/tv_order_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/view_all"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_14ssp"
                app:drawableEndCompat="@drawable/ic_side_arrow"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_active_orders"
                app:layout_constraintEnd_toEndOf="parent" />

            <HorizontalScrollView
                android:id="@+id/hsv_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_active_orders">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/bg_curve_blue"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/pending"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/bg_curve_grey"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/accepted"
                        android:textColor="@color/text_grey"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_curve_grey"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/shipped"
                        android:textColor="@color/text_grey"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/hsv_filters"
                tools:listitem="@layout/row_orders" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>